todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app       
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: project-pvc
      containers:
        - name: todo-app
          image: todo-app
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
