todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc         
spec:
  type: ClusterIP
  selector:
    app: todo-app      
  ports:
    - name: http
      protocol: TCP
      port: 3003   
      targetPort: 3000
